couple more changes
